--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "a0-angular-storage": "^0.0.13"
   }
 }
