--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "angular-mocks": "~1.4.0",
     "bootstrap": "~3.3.6",
     "a0-angular-storage": "^0.0.13",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "ui-bootstrap": "^1.3.3",
+    "angular-bootstrap": "^1.3.3"
   }
 }
