--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular-ui-router": "^0.3.1",
     "ui-bootstrap": "^1.3.3",
     "angular-bootstrap": "^1.3.3",
-    "angulartics-google-analytics": "^0.1.4"
+    "angulartics-google-analytics": "^0.1.4",
+    "font-awesome": "^4.6.3"
   }
 }
