--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,8 @@
     "ui-bootstrap": "^1.3.3",
     "angular-bootstrap": "^1.3.3",
     "angulartics-google-analytics": "^0.1.4",
-    "font-awesome": "^4.6.3"
+    "font-awesome": "^4.6.3",
+    "moment": "^2.13.0",
+    "angular-moment": "1.0.0-beta.3"
   }
 }
